<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tech Hub World</string>
    <string name="activate_tv">Activate your <font color="green">Screen</font> with <font color="green">Licence key</font>\nto get access to Features</string>
    <string name="pref">Choose your <font color="green">Preference</font></string>

    <string name="quote_1">You don\'t need a <font color="green">Sliver</font> folk to eat <font color="green">FOOD</font></string>
    <string name="quote_2">Nothing brings <font color="green">People</font> together like good <font color="green">FOOD</font></string>
    <string name="quote_3">A taste you\'ll <font color="green">Remember.</font></string>
    <string name="settings">settings</string>
    <string name="cancel">Cancel</string>
    <string name="check_updates">Update</string>
    <string name="choose_function">Please choose a function you want to perform!</string>
    <string name="perform_function">Perform a function</string>

</resources>