<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="20dp"
        android:elevation="5dp">

        <TextView
            android:id="@+id/titleTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/perform_function"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/descTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleTextview"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/choose_function"
            android:textColor="@color/black"
            android:textSize="25sp" />


        <LinearLayout
            android:id="@+id/t"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/descTextview"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_10sdp">

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/focused"
                android:text="@string/cancel"
                android:layout_marginHorizontal="5dp"

                android:textColor="@color/white" />

            <Button
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/focused"
                android:nextFocusUp="@id/cancel"
                android:text="@string/settings"
                android:textColor="@color/white" />
            <Button
                android:id="@+id/update"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/focused"
                android:paddingHorizontal="5dp"
                android:text="@string/check_updates"
                android:textColor="@color/white" />




        </LinearLayout>


    </RelativeLayout>


</RelativeLayout>