<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <ImageView
        android:id="@+id/backImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/test_back" />


    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="@drawable/transparent_back"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            />

        <com.quickfix.displaytv.common_ui.TextwithFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/quote_1"
            android:textColor="@color/white"
            android:textSize="30dp" />


        <TextView
            android:layout_width="50dp"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/holo_green_dark" />


        <com.quickfix.displaytv.common_ui.TextwithFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/quote_2"
            android:textColor="@color/white"
            android:textSize="30dp" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/holo_green_dark" />

        <com.quickfix.displaytv.common_ui.TextwithFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/quote_3"
            android:textColor="@color/white"
            android:textSize="30dp" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/holo_green_dark" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="600dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/transparent_back"
        android:orientation="vertical">

        <com.quickfix.displaytv.common_ui.TextwithFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="Today's Menu"
            android:textColor="@color/white"
            android:textSize="30dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:id="@+id/recyclerView"
            android:layout_margin="20dp" />

    </LinearLayout>


</RelativeLayout>



